tests/fail/ip.rs
use const_addrs::ip;

fn main() {
    let a = ip!("192.168.11");
    let b = ip!("2001:db8::32::23");
}
